[package]
name = "drone_image_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sevenz-rust={version="0.2", features=["aes256", "compress"]}
sha256 = "1.1.2"
hex-literal = "0.3.3"
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.93"
clap = {version = "4.1.4", features=["derive"]}
substring = "1.4.5"
